# EmbeddedKit

./: .gitignore  .mxproject  ARCHITECTURE_FIX_GUIDE.md  BRANCH_PROTECTION_GUIDE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  EK_Common.h  EK_Config.h  EK_HAL 硬件抽象层文档.md  EmbeddedKit 编码规范文档.md  EmbeddedKit.ioc  GEMINI.md  LICENSE  README.md  README_CN.md  README_EN.md  build.sh  ek_conf.h  ek_empty_obj.c  flash.ps1  gcc_build.sh  justfile  package.json  starm_clang_build.sh
L0_MCU/: CMakeLists.txt  readme.md
L0_MCU/STM32F429VGT6/: .mxproject  CMakeLists.txt  STM32F429VGT6.ioc
L0_MCU/STM32F429VGT6/Core/Src/: ltdc.c  main.c  usart.c
L1_MCU/: CMakeLists.txt  readme.md
L1_MCU/GD32F470ZGT6/: CMakeLists.txt  gd32f470zgt6_flash.ld
L1_MCU/GD32F470ZGT6/Bsp/: bsp_interface.h  bsp_io_define.h
L1_MCU/GD32F470ZGT6/Bsp/Inc/: bsp_adc.h  bsp_dac.h  bsp_dma.h  bsp_exmc.h  bsp_gpio.h  bsp_iic.h  bsp_ipa.h  bsp_led_key.h  bsp_sdio.h  bsp_spi.h  bsp_timer.h  bsp_usart.h
L1_MCU/GD32F470ZGT6/Bsp/Src/: bsp_adc.c  bsp_dac.c  bsp_dma.c  bsp_exmc.c  bsp_gpio.c  bsp_iic.c  bsp_ipa.c  bsp_led_key.c  bsp_sdio.c  bsp_spi.c  bsp_timer.c  bsp_usart.c
L1_MCU/GD32F470ZGT6/Core/Inc/: gd32f4xx_libopt.h  main.h  systick.h
L1_MCU/GD32F470ZGT6/Core/Src/: gd32f4xx_it.c  main.c  syscall.c  systick.c
L1_MCU/GD32F470ZGT6/Driver/Inc/: gd32f4xx_adc.h  gd32f4xx_can.h  gd32f4xx_crc.h  gd32f4xx_ctc.h  gd32f4xx_dac.h  gd32f4xx_dbg.h  gd32f4xx_dci.h  gd32f4xx_dma.h  gd32f4xx_enet.h  gd32f4xx_exmc.h  gd32f4xx_exti.h  gd32f4xx_fmc.h  gd32f4xx_fwdgt.h  gd32f4xx_gpio.h  gd32f4xx_i2c.h  gd32f4xx_ipa.h  gd32f4xx_iref.h  gd32f4xx_misc.h  gd32f4xx_pmu.h  gd32f4xx_rcu.h  gd32f4xx_rtc.h  gd32f4xx_sdio.h  gd32f4xx_spi.h  gd32f4xx_syscfg.h  gd32f4xx_timer.h  gd32f4xx_tli.h  gd32f4xx_trng.h  gd32f4xx_usart.h  gd32f4xx_wwdgt.h
L1_MCU/GD32F470ZGT6/Driver/Src/: gd32f4xx_adc.c  gd32f4xx_can.c  gd32f4xx_crc.c  gd32f4xx_ctc.c  gd32f4xx_dac.c  gd32f4xx_dbg.c  gd32f4xx_dci.c  gd32f4xx_dma.c  gd32f4xx_enet.c  gd32f4xx_exmc.c  gd32f4xx_exti.c  gd32f4xx_fmc.c  gd32f4xx_fwdgt.c  gd32f4xx_gpio.c  gd32f4xx_i2c.c  gd32f4xx_ipa.c  gd32f4xx_iref.c  gd32f4xx_misc.c  gd32f4xx_pmu.c  gd32f4xx_rcu.c  gd32f4xx_rtc.c  gd32f4xx_sdio.c  gd32f4xx_spi.c  gd32f4xx_syscfg.c  gd32f4xx_timer.c  gd32f4xx_tli.c  gd32f4xx_trng.c  gd32f4xx_usart.c  gd32f4xx_wwdgt.c
L1_MCU/GD32F470ZGT6/Hal/: hal_interface.h
L1_MCU/GD32F470ZGT6/Hal/Inc/: hal_adc.h  hal_dac.h  hal_dma.h  hal_iic.h  hal_ipa.h  hal_pwm.h  hal_spi.h  hal_tim.h  hal_usart.h
L1_MCU/GD32F470ZGT6/Hal/Src/: hal_adc.c  hal_dac.c  hal_dma.c  hal_iic.c  hal_ipa.c  hal_pwm.c  hal_spi.c  hal_tim.c  hal_usart.c
L1_MCU/STM32F407VGT6_GCC/: .mxproject  CMakeLists.txt  STM32F407VGT6_GCC.ioc  stm32f407vgt6_flash.ld
L1_MCU/STM32F407VGT6_GCC/Core/Inc/: main.h
L1_MCU/STM32F407VGT6_GCC/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
L1_MCU/STM32F407VGT6_GCC/cmake/stm32cubemx/: CMakeLists.txt
L1_MCU/STM32F429VGT6/: CMakeList.txt
L1_MCU/STM32F429VGT6/Core/Inc/: main.h  stm32f4xx_hal_conf.h
L1_MCU/STM32F429VGT6/Core/Src/: dma.c  fmc.c  main.c
L1_MCU/STM32F429VGT6/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
L1_MCU/STM32F429ZIT6/: CMakeLists.txt  STM32F429ZIT6.ioc
L1_MCU/STM32F429ZIT6/Core/Src/: i2c.c  main.c  spi.c  stm32f4xx_it.c
L1_MCU/STM32F429ZIT6/cmake/stm32cubemx/: CMakeLists.txt
L1_MCU/STM32F429ZIT6_GCC/: .mxproject  CMakeLists.txt  STM32F429ZIT6_GCC.ioc  stm32f429zit6_flash.ld
L1_MCU/STM32F429ZIT6_GCC/Core/Inc/: main.h  stm32f4xx_it.h
L1_MCU/STM32F429ZIT6_GCC/Core/Src/: dma2d.c  gpio.c  i2c.c  ltdc.c  main.c  stm32f4xx_it.c  tim.c  usart.c
L1_MCU/STM32F429ZIT6_GCC/cmake/stm32cubemx/: CMakeLists.txt
L1_MCU/STM32F429ZIT6_STARM/: .mxproject  CMakeLists.txt  STM32F429ZIT6_STARM.ioc  stm32f429zit6_flash.ld
L1_MCU/STM32F429ZIT6_STARM/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
L1_MCU/stub/: ek_app_stub.c
L2_Core/: CMakeLists.txt  readme.md
L2_Core/hal/inc/: ek_hal_adc.h  ek_hal_base.h  ek_hal_dac.h  ek_hal_dma.h  ek_hal_dma2d.h  ek_hal_gpio.h  ek_hal_i2c.h  ek_hal_ltdc.h  ek_hal_pwm.h  ek_hal_spi.h  ek_hal_tick.h  ek_hal_tim.h  ek_hal_uart.h
L2_Core/hal/src/: ek_hal_adc.c  ek_hal_dac.c  ek_hal_dma.c  ek_hal_dma2d.c  ek_hal_gpio.c  ek_hal_i2c.c  ek_hal_ltdc.c  ek_hal_pwm.c  ek_hal_spi.c  ek_hal_tick.c  ek_hal_tim.c  ek_hal_uart.c
L2_Core/inc/: ek_def.h  ek_io.h  ek_list.h  ek_log.h  ek_malloc.h  ek_mem.h  ek_ringbuf.h  ek_stack.h  ek_std.h
L2_Core/port/gd32f470zgt6/: gd_adc_port.c  gd_dac_port.c  gd_dma_port.c  gd_gpio_port.c  gd_i2c_port.c  gd_ipa_port.c  gd_pwm_port.c  gd_spi_port.c  gd_tick_port.c  gd_tim_port.c  gd_uart_port.c
L2_Core/port/inc/: gd_hal_port.h  st_hal_port.h
L2_Core/port/stm32f429zi/: st_dma2d_port.c  st_gpio_port.c  st_i2c_port.c  st_ltdc_port.c  st_spi_port.c  st_tick_port.c  st_tim_port.c  st_uart_port.c
L2_Core/src/: ek_log.c  ek_mem.c  ek_ringbuf.c  ek_stack.c
L2_Core/utils/inc/: ek_assert.h  ek_def.h  ek_evoke.h  ek_export.h  ek_io.h  ek_list.h  ek_log.h  ek_mem.h  ek_ringbuf.h  ek_shell.h  ek_stack.h  ek_str.h  ek_vec.h
L2_Core/utils/src/: ek_assert.c  ek_evoke.c  ek_export.c  ek_io.c  ek_log.c  ek_mem.c  ek_ringbuf.c  ek_stack.c  ek_str.c
L3_Middlewares/: CMakeLists.txt  readme.md
L3_Middlewares/FatFS/: CMakeLists.txt  diskio.c
L3_Middlewares/FreeRTOS/: CMakeLists.txt  tasks.c
L3_Middlewares/FreeRTOS/conf/: FreeRTOSConfig.h
L3_Middlewares/LVGL/: lv_conf.h
L3_Middlewares/LVGL/env_support/cmake/: custom.cmake
L4_Components/: CMakeLists.txt  readme.md
L4_Components/src/: cmpt_dev.c
Test/: CMakeLists.txt  build.sh  main.c  ringbuf_test.c  shell_port.c  shell_symbols.c  stack_test.c  str_test.c  test.h  test_list.c  vec_test.c
Test/Doc/: readme.md
Test/STM32F407VGT6_JLC_TKX/: .mxproject  CMakeLists.txt  STM32F407VGT6_JLC_TKX.ioc  download.ps1
Test/STM32F407VGT6_JLC_TKX/App/Inc/: Interrupt.h  Task_App.h
Test/STM32F407VGT6_JLC_TKX/App/Src/: Task_App.c
Test/STM32F407VGT6_JLC_TKX/Bsp/Inc/: Serial.h
Test/STM32F407VGT6_JLC_TKX/Core/Inc/: main.h
Test/STM32F407VGT6_JLC_TKX/EK_Component/: EK_Common.h  EK_Config.h
(+240 files in other folders)
